--- a/app/src/main/res/layout/pinenteractivity.xml
+++ b/app/src/main/res/layout/pinenteractivity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PinSetActivity">
+    tools:context=".PinEnterActivity">
 
     <TextView
         android:id="@+id/PinEntryHeading"
@@ -45,9 +45,9 @@
         tools:targetApi="o" />
 
     <Button
-        android:id="@+id/ConfirmPinbutton"
-        android:layout_width="136dp"
-        android:layout_height="86dp"
+        android:id="@+id/ConfirmPinCreatebutton"
+        android:layout_width="105dp"
+        android:layout_height="67dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="180dp"
@@ -59,20 +59,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pinEntryFieldText" />
 
-    <TextView
-        android:id="@+id/testField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/SetUpbutton"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
+        android:layout_width="167dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="WillupDateIfWorking"
-        app:layout_constraintBottom_toTopOf="@+id/ConfirmPinbutton"
+        android:text="@string/first_time_click_here_to_set_up"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pinEntryFieldText" />
+        app:layout_constraintTop_toBottomOf="@+id/ConfirmPinCreatebutton" />
+
+    <TextView
+        android:id="@+id/countView"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/you_have_3_attempts_left"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pinEntryFieldText"
+        app:layout_constraintVertical_bias="0.218" />
 
 </android.support.constraint.ConstraintLayout>
